docs: viết chi tiết 17 bài placeholder theo văn phong hashmap-deep-dive
Đào sâu internal/advanced cho 17 doc còn là placeholder:
- fundamentals: oop-4-tinh-chat, access-modifier
- jvm: jvm-jdk-jre
- collections: collection-framework-overview, list-vs-map-vs-set
- concurrency: data-race-vs-race-condition
- design-patterns: solid-principles, creational/structural/behavioral-patterns
- serialization: protobuf-avro
- io-network: rest-vs-soap, streaming-data, download-large-file
- spring: spring-overview
- modern-java: optional, pattern-matching

Co-Authored-By: Hiệp Bá <vanhiep99w@gmail.com>